Alteração de font-size e espaçamento

--- a/style.css
+++ b/style.css
@@ -2205,7 +2205,7 @@ label {
 }
 
 .section.sub-hero {
-  min-height: 10vh;
+  min-height: 50vh;
   flex-direction: column;
   justify-content: center;
   display: flex;
@@ -5042,14 +5042,15 @@ label {
 }
 
 .hero-landing-03 {
+  grid-row-gap: 3em;
   margin-top: 30px;
-  min-height: 8vh;
+  min-height: 15vh;
   text-align: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-left: 5em;
-  padding-right: 5em;
+  padding-left: 3em;
+  padding-right: 3em;
   display: flex;
 }
 
@@ -5279,7 +5280,7 @@ label {
   text-align: left;
   letter-spacing: -.028em;
   font-family: Inter, sans-serif;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 300;
   line-height: 1.25;
 }
@@ -6192,7 +6193,7 @@ label {
   }
 
   .h-large.condensed {
-    font-size: 100px;
+    font-size: 150px;
   }
 
   .h-large.pro {
@@ -6511,7 +6512,7 @@ label {
   }
 
   .h-xxlarge {
-    font-size: 120px;
+    font-size: 300px;
   }
 
   .regular-nav-wrapper {
